# vqpu-hybrid-workflow

./: .buildinfo  .gitignore  History.rst  README.md  description.html  examples.html  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  qbitbridge.html  search.html  searchindex.js  usage.html
.github/workflows/: doc_pages.yml  greetings.yml  pylintwithblack.yml
_modules/: index.html
_modules/qbitbridge/: options.html  utils.html
_sources/: description.rst.txt  index.rst.txt  installation.rst.txt  qbitbridge.rst.txt  usage.rst.txt
_static/: basic.css
docs/: clusters.rst  conf.py  description.rst  examples.rst  index.rst  modules.rst  options.rst  usage.rst  vqpubase.rst  vqpubraket.rst  vqpucommon.rst  vqpuflow.rst  vqpuquera.rst  vqpuworkflow_deprecated.rst
docs/figs/: multi-vqpu-workflow.dot
examples/flows/: aquila_ctqw_test.py  bayes_workflow.py  launch_vqpu_test_deprecated.py  multi_vqpu_cpugpu_workflow.py  tutorial_workflow.py  vqpu_test_workflow_deprecated.py
examples/python/: generic_artificat_workflow.py  generic_workflow.py  mycommon  noise_model.py  sample_async_tasks.py  sample_event_workflow.py
examples/remote/: remote_backends_ella-n001.yaml  remote_backends_ella-n002.yaml  remote_backends_ella-n003.yaml  remote_backends_ella-n004.yaml  remote_backends_ella-n005.yaml  remote_backends_ella-n006.yaml  remote_backends_ella-n007.yaml
qbitbridge/: __init__.py  clusters.py  options.py  utils.py  vqpubase.py  vqpubraket.py  vqpucudaq.py  vqpufitting.py  vqpuflow.py  vqpuqistkit.py  vqpuquera.py  vqpuworkflow_deprecated.py
scripts/: README.md  run_start_up_scripts_for_ella.sh  run_start_up_scripts_for_example.sh  start_postgres.sh
workflow/: launch_vqpu_test.py  launch_vqpu_test_deprecated.py  multi_vqpu_cpugpu_workflow.py  multi_vqpu_cpugpu_workflow_deprecated.py  qpu_noise_test_workflow.py  vqpu_test_workflow.py  vqpu_test_workflow_deprecated.py
workflow/aws/: aws_profile_env.template.sh  login_aws.sh
workflow/circuits/: qristal_circuits.py  test_circuits.py
workflow/clusters/: clusters.py  ella-qb-1.7.0-pypath.yaml  ella-qb-1.7.0.yaml  ella-qb-cuda24.9.yaml  ella-qb-withworkflow.yaml  ella-qb.yaml  ella.yaml  ella_clusters.py  example.yaml  setonix-pypath.yaml  setonix_clusters.py  test.yaml
workflow/common/: utils.py  vqpuworkflow.py
workflow/example_flows/: launch_vqpu_test_deprecated.py  multi_vqpu_cpugpu_workflow.py  multi_vqpu_cpugpu_workflow_deprecated.py  tutorial_workflow.py  vqpu_test_workflow_deprecated.py
workflow/qb-vqpu/: remote_vqpu_template.example.yaml  remote_vqpu_template.yaml  remote_vqpu_template_1.7.0.yaml  vqpu.sh  vqpu_template.example.sh  vqpu_template.sh  vqpu_template_1.7.0 copy.sh  vqpu_template_1.7.0.sh
workflow/quera/: quera_bloqade_access_env.template.sh
workflow/scripts/: close_and_cleanup.sh  run_start_up_scripts_for_ella.sh  start_postgres.sh  start_prefect.sh
workflow/tests/: test_basic_flow.py  test_braket.py  test_cudaq.py  test_qiskit.py  test_quera.py  test_serialization.py
workflow/tests/profile_util/: build_cuda.sh  build_hip.sh
workflow/tests/profile_util/cmake/: PUCMakeUtils.cmake
workflow/tests/profile_util/src/tests/: test_profile_util.cpp
workflow/vqpucommon/: __init__.py  clusters.py  options.py  remote_vqpu_template.yaml  utils.py  vqpu.sh  vqpubase.py  vqpubraket.py  vqpuflow.py  vqpuquera.py  vqpuworkflow.py
